--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>home</title>
    <link rel="stylesheet" href="css/style.css">
      <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+
+<div id="header">
+<h1>Welcome to My Website</h1>
+<img src="media/video/icon3.gif" alt="Logo" id="logo">
+</div>
+
+
+
+
 
 </head>
 <body>
