--- a/index.html
+++ b/index.html
@@ -7,16 +7,44 @@
    <link rel="stylesheet" href="css/style.css">
      <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
 
-<div id="header">
-<h1>Welcome to My Website</h1>
-<img src="media/video/icon3.gif" alt="Logo" id="logo">
-</div>
+     <style>
+        body {
+          background-image: url('media/images/landscape-contour.png');
+        }
+        </style>
 
 
 
 
+<div class="flex-container-main">
 
-</head>
+
+     <div class="header"> 
+
+        <a href="index.html" id="home">epilithic</a>
+        <br><br>
+        <a href="html/about.html" id="header">about</a>
+        <a href="html/blog.html" id="header">blog</a>
+        <a href="html/forum.html" id="header">forum</a>
+        <a href="html/shop.html" id="header">sundries</a>
+
+
+        </div>
+
+
+        <div class="flex-container">  
+     
+            <img id="gif"
+            src="media/video/icon3.gif">
+
+            <img id="image"
+            src="media/epilithic [Recovered].png">
+
+
+        </div>
+        </div>
+
+        
 <body>
 
     <script src="js/main.js"></script>
