--- a/html/forum.html
+++ b/html/forum.html
@@ -3,22 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>home</title>
-   <link rel="stylesheet" href="css/style.css">
+    <title>epilithic</title>
+    <link rel="icon" type="image/x-icon" href="../media/images/x-cons-submarks-03.png">
+   <link rel="stylesheet" href="../css/style.css">
+   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
      <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+
+  
+
+<div data-aos="zoom-in">
 
 
 <div class="flex-container-main">
-
+<div class="header-row">
+    <a href="../index.html" id="home">epilithic</a>
+</div>
 
      <div class="header"> 
 
         <a href="../index.html" id="home">epilithic</a>
-        <br><br>
-        <a href="../html/about.html" id="about">about</a>
-        <a href="../html/contact.html" id="contact">blog</a>
-        <a href="../media/KaylaSuess_RESUME.pdf" id="contact">forum</a>
-        <a href="../media/KaylaSuess_RESUME.pdf" id="contact">sundries</a>
+        <a href="../html/about.html" id="header">about</a>
+        <a href="../html/blog.html" id="header">blog</a>
+        <a href="../html/shop.html" id="header">sundries</a>
 
 
         </div>
@@ -27,10 +33,14 @@
         <div class="flex-container">  
      
             <img id="gif"
-            src="media/video/icon3.gif">
+            src="../media/video/icon3.gif">
+
+    
 
 
 
+
+        </div>
         </div>
         </div>
 
@@ -38,5 +48,9 @@
 <body>
 
     <script src="js/main.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
 </body>
 </html>
