--- a/index.html
+++ b/index.html
@@ -3,33 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>home</title>
+    <title>epilithic</title>
+    <link rel="icon" type="image/x-icon" href="media/images/x-cons-submarks-06.png">
    <link rel="stylesheet" href="css/style.css">
+   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
      <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
 
      <style>
         body {
           background-image: url('media/images/landscape-contour.png');
+         /* background-color: black; */
         }
         </style>
 
-
+<div data-aos="zoom-in">
 
 
 <div class="flex-container-main">
 
 
-     <div class="header"> 
+     <!-- <div class="header"> 
 
         <a href="index.html" id="home">epilithic</a>
-        <br><br>
         <a href="html/about.html" id="header">about</a>
         <a href="html/blog.html" id="header">blog</a>
         <a href="html/forum.html" id="header">forum</a>
         <a href="html/shop.html" id="header">sundries</a>
 
 
-        </div>
+        </div> -->
 
 
         <div class="flex-container">  
@@ -37,10 +39,15 @@
             <img id="gif"
             src="media/video/icon3.gif">
 
-            <img id="image"
-            src="media/epilithic [Recovered].png">
+    
 
 
+            <a href="html/about.html">
+                <img id="home-image"
+                src="media/images/home-screen.png">
+
+
+        </div>
         </div>
         </div>
 
@@ -48,5 +55,9 @@
 <body>
 
     <script src="js/main.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
 </body>
 </html>
